# order_emojis_ml

./: main.ipynb  pyproject.toml
